changes from http to https

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,11 +1,11 @@
 
 <div class="logo">
-    <a href="http://www.creative-tim.com" class="simple-text logo-mini">
+    <a href="https://www.creative-tim.com" class="simple-text logo-mini">
       <div class="logo-img">
           <img src="./assets/img/angular2-logo-white.png"/>
       </div>
     </a>
-    <a href="http://www.creative-tim.com" class="simple-text logo-normal">
+    <a href="https://www.creative-tim.com" class="simple-text logo-normal">
         Creative Tim
     </a>
 </div>
