changed sidebar color

--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="sidebar" data-color="orange">
+    <div class="sidebar" data-color="red">
         <app-sidebar></app-sidebar>
     </div>
     <div class="main-panel">
