changed some paths

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,7 +9,7 @@
           </a>
         </li>
         <li>
-          <a href="http://presentation.creative-tim.com">
+          <a href="https://www.creative-tim.com/about-us">
             About Us
           </a>
         </li>
