--- a/src/assets/scss/now-ui-dashboard/mixins/_vendor-prefixes.scss
+++ b/src/assets/scss/now-ui-dashboard/mixins/_vendor-prefixes.scss
@@ -188,3 +188,8 @@
   -o-transform: scale($horiz, $vert);
   transform: scale($horiz, $vert);
 }
+@mixin panel-gradient($color) {
+  background: $color;  /* fallback for old browsers */
+  background: linear-gradient(160deg, $color 0%, darken($black-color,5) 100%);
+  background-size: 105%;
+}
