--- a/src/assets/scss/now-ui-dashboard/_tables.scss
+++ b/src/assets/scss/now-ui-dashboard/_tables.scss
@@ -166,3 +166,9 @@
 #tables .table-responsive{
     margin-bottom: 30px;
 }
+.table thead th{
+  border-bottom: none;
+}
+.table th{
+  border-top: none;
+}
