--- a/src/assets/scss/now-ui-dashboard.scss
+++ b/src/assets/scss/now-ui-dashboard.scss
@@ -1,11 +1,11 @@
 /*!
 
  =========================================================
- * Now UI Dashboard - v1.0.1
+ * Now UI Dashboard Angular - v1.0.0
  =========================================================
 
- * Product Page: https://www.creative-tim.com/product/now-ui-dashboard
- * Copyright 2018 Creative Tim (http://www.creative-tim.com)
+ * Product Page: https://www.creative-tim.com/product/now-ui-dashboard-angular
+ * Copyright 2018 Creative Tim (https://www.creative-tim.com)
 
  * Designed by www.invisionapp.com Coded by www.creative-tim.com
 
@@ -16,37 +16,36 @@
  */
  @import "~bootstrap/scss/bootstrap";
  @import 'now-ui-dashboard/variables';
+ @import 'now-ui-dashboard/mixins';
 
-@import 'now-ui-dashboard/mixins';
+ // Plugins CSS
+ @import "now-ui-dashboard/plugins/plugin-animate-bootstrap-notify";
+ @import "now-ui-dashboard/plugins/plugin-perfect-scrollbar";
 
-// Plugins CSS
-@import "now-ui-dashboard/plugins/plugin-animate-bootstrap-notify";
-@import "now-ui-dashboard/plugins/plugin-perfect-scrollbar";
+ // Core CSS
+ @import "now-ui-dashboard/buttons";
+ @import "now-ui-dashboard/inputs";
+ @import "now-ui-dashboard/typography";
+ @import "now-ui-dashboard/misc";
+ @import "now-ui-dashboard/checkboxes-radio";
 
-// Core CSS
-@import "now-ui-dashboard/buttons";
-@import "now-ui-dashboard/inputs";
-@import "now-ui-dashboard/typography";
-@import "now-ui-dashboard/misc";
-@import "now-ui-dashboard/checkboxes-radio";
+ // components
+ @import "now-ui-dashboard/navbar";
+ @import "now-ui-dashboard/page-header";
+ @import "now-ui-dashboard/dropdown";
+ @import "now-ui-dashboard/alerts";
+ @import "now-ui-dashboard/images";
+ @import "now-ui-dashboard/nucleo-outline";
+ @import "now-ui-dashboard/tables";
+ @import "now-ui-dashboard/sidebar-and-main-panel";
+ @import "now-ui-dashboard/footers";
+ @import "now-ui-dashboard/fixed-plugin";
 
-// components
-@import "now-ui-dashboard/navbar";
-@import "now-ui-dashboard/page-header";
-@import "now-ui-dashboard/dropdown";
-@import "now-ui-dashboard/alerts";
-@import "now-ui-dashboard/images";
-@import "now-ui-dashboard/nucleo-outline";
-@import "now-ui-dashboard/tables";
-@import "now-ui-dashboard/sidebar-and-main-panel";
-@import "now-ui-dashboard/footers";
-@import "now-ui-dashboard/fixed-plugin";
+ // cards
+ @import "now-ui-dashboard/cards";
+ @import "now-ui-dashboard/cards/card-plain";
+ @import "now-ui-dashboard/cards/card-chart";
+ @import "now-ui-dashboard/cards/card-user";
+ @import "now-ui-dashboard/cards/card-map";
 
-// cards
-@import "now-ui-dashboard/cards";
-@import "now-ui-dashboard/cards/card-plain";
-@import "now-ui-dashboard/cards/card-chart";
-@import "now-ui-dashboard/cards/card-user";
-@import "now-ui-dashboard/cards/card-map";
-
-@import "now-ui-dashboard/responsive";
+ @import "now-ui-dashboard/responsive";
