fixed html bug.

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -24,8 +24,8 @@
               </div>
               <div class="col-md-4 pl-1">
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" placeholder="Email">
+                  <label for="email">Email address</label>
+                  <input name="email" id="email" type="email" class="form-control" placeholder="Email">
                 </div>
               </div>
             </div>
