fix upgrade to pro

--- a/src/assets/scss/now-ui-dashboard/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/now-ui-dashboard/_sidebar-and-main-panel.scss
@@ -113,9 +113,22 @@
                 }
             }
 
-            &.active > a{
+            &.active > a,
+            &.active-pro > a{
               background-color: $white-color;
               box-shadow: $box-shadow;
+              i{
+                color: $danger-color;
+              }
+            }
+            :hover &.active-pro > a,
+            :focus &.active-pro > a{
+              background-color: $white-color;
+              box-shadow: $box-shadow;
+              color: $danger-color;
+              i{
+                color: $danger-color;
+              }
             }
         }
 
