--- a/src/assets/scss/now-ui-dashboard.scss
+++ b/src/assets/scss/now-ui-dashboard.scss
@@ -1,19 +1,20 @@
 /*!
 
- =========================================================
- * Now UI Dashboard Angular - v1.1.0
- =========================================================
+=========================================================
+* Now UI Dashboard Angular - v1.1.0
+=========================================================
 
- * Product Page: https://www.creative-tim.com/product/now-ui-dashboard-angular
- * Copyright 2018 Creative Tim (https://www.creative-tim.com)
+* Product Page: https://www.creative-tim.com/product/now-ui-dashboard-angular
+* Copyright 2019 Creative Tim (https://www.creative-tim.com)
+* Licensed under MIT (https://github.com/creativetimofficial/now-ui-dashboard-angular/blob/master/LICENSE.md)
 
- * Designed by www.invisionapp.com Coded by www.creative-tim.com
+* Coded by Creative Tim
 
- =========================================================
+=========================================================
 
- * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
- */
+*/
  @import "~bootstrap/scss/bootstrap";
  @import 'now-ui-dashboard/variables';
  @import 'now-ui-dashboard/mixins';
