--- a/src/assets/scss/now-ui-dashboard/_inputs.scss
+++ b/src/assets/scss/now-ui-dashboard/_inputs.scss
@@ -7,6 +7,7 @@
     color: $black-color;
     line-height: normal;
     font-size: $font-size-small;
+    height: auto;
     @include transition-input-focus-color();
     @include box-shadow(none);
 
@@ -193,7 +194,7 @@
     & i{
       opacity: .5;
     }
-    
+
     @include transition-input-focus-color();
 
     .has-danger.input-group-focus &{
