--- a/src/assets/scss/now-ui-dashboard.scss
+++ b/src/assets/scss/now-ui-dashboard.scss
@@ -1,7 +1,7 @@
 /*!
 
 =========================================================
-* Now UI Dashboard Angular - v1.3.0
+* Now UI Dashboard Angular - v1.4.0
 =========================================================
 
 * Product Page: https://www.creative-tim.com/product/now-ui-dashboard-angular
@@ -15,7 +15,7 @@
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
 */
- @import "~bootstrap/scss/bootstrap";
+//  @import "~bootstrap/scss/bootstrap";
  @import 'now-ui-dashboard/variables';
  @import 'now-ui-dashboard/mixins';
 
